Fixed input field border radius on mobile

--- a/public/src/css/staticshowdown.webflow.css
+++ b/public/src/css/staticshowdown.webflow.css
@@ -235,6 +235,7 @@ p {
   float: left;
   clear: left;
   border-style: solid;
+  border-radius: 0;
   border-width: 0px 0px 2px;
   border-color: black black white;
   background-color: rgba(255, 0, 0, 0);
@@ -245,6 +246,8 @@ p {
   font-size: 24px;
   text-align: center;
 }
+
+
 .input:focus {
   border-bottom-color: #F3CF4E;
 }
